--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 KAFKA_BROKER=localhost:9092
 MYSQL_HOST=localhost
 MYSQL_USER=root
-MYSQL_PASSWORD=rsYR!1606
+MYSQL_PASSWORD=PWD
 MYSQL_DATABASE=notifications
 PORT=3000
